--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 beautifulsoup4==4.12.2
+blinker==1.6.2
 bs4==0.0.1
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 coverage==7.2.6
 exceptiongroup==1.1.1
-Flask==2.2.5
+Flask==2.3.2
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 idna==3.4
@@ -22,10 +24,11 @@ pytest-cov==4.1.0
 pytest-cover==3.0.0
 pytest-coverage==0.0
 requests==2.31.0
+six==1.16.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.16
 tomli==2.0.1
 typing_extensions==4.6.2
 urllib3==2.0.2
-Werkzeug==2.2.3
+Werkzeug==2.3.6
 zipp==3.15.0
